# fprime-freertos-stm32

./: .gitignore  CMakeLists.txt  CMakePresets.json  GDS_SETUP_GUIDE.md  QUICK_START_GDS.md  README.md  requirements.txt
HeaterBoard/: CMakeLists.txt
HeaterBoard/Components/: CMakeLists.txt
HeaterBoard/Components/LedBlinker/: CMakeLists.txt  LedBlinker.cpp  LedBlinker.fpp  LedBlinker.hpp
HeaterBoard/Components/LedBlinker/docs/: sdd.md
HeaterBoard/LedBlinkerDeployment/: CMakeLists.txt  Main.cpp  README.md
HeaterBoard/LedBlinkerDeployment/Top/: CMakeLists.txt  LedBlinkerDeploymentPackets.fppi  LedBlinkerDeploymentTopology.cpp  LedBlinkerDeploymentTopology.hpp  LedBlinkerDeploymentTopologyDefs.fpp  LedBlinkerDeploymentTopologyDefs.hpp  instances.fpp  topology.fpp
STM32/STM32GpioDriver/: CMakeLists.txt  STM32GpioDriver.cpp  STM32GpioDriver.fpp  STM32GpioDriver.hpp
STM32/STM32H7_HAL/: .mxproject  CMakeLists.txt  CMakeLists_fprime.txt  STM32H7A3XX_FLASH.ld  stm32h7nucleoboard.ioc
STM32/STM32H7_HAL/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
STM32/STM32H7_HAL/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
STM32/STM32H7_HAL/Drivers/CMSIS/Device/ST/STM32H7xx/Include/: stm32h7xx.h
STM32/STM32H7_HAL/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
STM32/STM32H7_HAL/cmake/stm32cubemx/: CMakeLists.txt
STM32/STM32UartDriver/: CMakeLists.txt  STM32UartDriver.cpp  STM32UartDriver.fpp  STM32UartDriver.hpp
STM32/cmake/toolchain/: stm32h743.cmake
STM32H7_HAL/: .mxproject  stm32h7nucleoboard.ioc
STM32H7_HAL/Core/Inc/: main.h  stm32h7xx_it.h
STM32H7_HAL/Core/Src/: stm32h7xx_it.c
cmake/platform/: PlatformCfg.fpp  freertos.cmake
cmake/platform/Platform/: CMakeLists.txt  PlatformTypes.fpp  PlatformTypes.h
cmake/toolchain/: stm32h7a3.cmake
output/: HeaterBoard_LedBlinkerDeployment  LedBlinkerDeploymentTopologyDictionary.json
